...
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonBoris00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_boris"
                app:srcCompat="@drawable/boris00" />

...
                android:layout_weight="1"
                android:contentDescription="@string/button_boris"
                android:visibility="gone"
                app:srcCompat="@drawable/boris04" />

            <ImageButton
                android:id="@+id/imageButtonLiam00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_liam"
                app:srcCompat="@drawable/liam00" />

...
                android:layout_weight="1"
                android:contentDescription="@string/button_liam"
                android:visibility="gone"
                app:srcCompat="@drawable/liam03" />

            <ImageButton
                android:id="@+id/imageButtonDavid00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_david"
                app:srcCompat="@drawable/david00" />

...
                android:layout_weight="1"
                android:contentDescription="@string/button_david"
                android:visibility="gone"
                app:srcCompat="@drawable/david03" />

            <ImageButton
                android:id="@+id/imageButtonTheresa00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_theresa"
                app:srcCompat="@drawable/theresa00" />

...
