<resources>
    <string name="app_name">Brexit Soundboard</string>

    <string name="button_boris">Alexander Boris de Pfeffel Johnson</string>
    <string name="button_liam">Sir Liam Fox</string>
    <string name="button_david">Sir David Davis</string>
    <string name="button_theresa">The Baroness May of Maidenhead</string>
    <string name="button_jacob">Sir Jacob William Rees-Mogg</string>

    <string name="button_boris_350MillionPoundsAWeek">350 Million Pounds A Week</string>
    <string name="button_boris_AllYourOptionsAreGood">All Your Options Are Good</string>
    <string name="button_boris_CostOfGettingOutVirtuallyNil">Cost Of Getting Out Virtually Nil</string>
    <string name="button_boris_HiggledyPiggledyNations">Higgledy-piggledy Nations</string>
    <string name="button_boris_TigerInTheTank">Tiger In The Tank</string>
    <string name="button_boris_VindicatedByHistory">Vindicated By History</string>
    <string name="button_boris_WeExportTvAerials">We Export Tv Aerials</string>
    <string name="button_boris_WeightLiftedFromBritishBusiness">Weight Lifted From British Business</string>
    <string name="button_boris_WinWinForAllOfUs">Win Win For All Of Us</string>
    <string name="button_boris_LittleBenefitFromEU">Little Benefit From EU</string>
    <string name="button_boris_UkShapingTheModernWorld">UK Shaping The Modern world</string>
    <string name="button_boris_BrexitHasNotDamagedCountry">Brexit Has Not Damaged Country</string>
    <string name="button_boris_DoNotUnderestimate">Do Not Underestimate</string>
    <string name="button_boris_AsLongAsItTakes">For As Long As It Takes</string>
    <string name="button_boris_StunningSuccess">Stunning Success</string>
    <string name="button_boris_DeadInADitch">Dead In A Ditch</string>
    <string name="button_boris_FriendsAreABitNegative">Friends are a bit negative</string>
    <string name="button_boris_LetsGetBrexitDone">Lets Get Brexit Done</string>
    <string name="button_boris_NoNIChecks">No NI Checks</string>
    <string name="button_boris_PutItInTheMicrowave">Put it in the microwave</string>
    <string name="button_boris_WeHaveADeal">We have a deal</string>
    <string name="button_boris_ACakistTreaty">A Cakist Treaty</string>
    <string name="button_boris_ProsperMightily">We Will Prosper Mightily</string>
    <string name="button_boris_FantasticDealForAll">Fantastic Deal For All</string>
    <string name="button_boris_FullControlOfWaters">Full Control of Waters</string>
    <string name="button_boris_MoreBusinessWithEU">More Business With EU</string>
    <string name="button_boris_NoNonTariffBarriers">No Non Tariff Barriers</string>
    <string name="button_boris_SandpaperingTheBarnacles">Sandpapering the Barnacles</string>
    <string name="button_boris_FacingARealProblem">Facing a Real, Real Problem</string>
    <string name="button_boris_IgnoreMerchantsOfGloom">Ignore Merchants of Gloom</string>
    <string name="button_boris_brexit_and_ukraine_similar">Brexit same as Ukraine War</string>
    <string name="button_boris_no_impediment_to_our_exports">No impediment to exports</string>

    <string name="button_david_AgreementWillFavourTheEU">Agreement Will Favour The EU</string>
    <string name="button_david_ConfidentOfAGoodOutcome">Confident Of A Good Outcome</string>
    <string name="button_david_DifficultToReadWhatWeIntend">Difficult To Read What We Intend</string>
    <string name="button_david_FollowUs">Follow Us?</string>
    <string name="button_david_IRuleNothingInNothingOut">I Rule Nothing In Nothing Out</string>
    <string name="button_david_ItsGettingABitTense">It\'s Getting A Bit Tense</string>
    <string name="button_david_ItsGoingIncrediblyWell">It\'s Going Incredibly Well</string>
    <string name="button_david_NobodyPretendedThisWillBeSimpleOrEasy">Nobody Pretended This Will Be Simple</string>
    <string name="button_david_VeryGoodLawyers">We\'ve Got Very Good Lawyers</string>
    <string name="button_david_SectorialAnalysis">Sectorial Analysis</string>
    <string name="button_david_OnlyLastTwoMonthsMatter">Only Last Two Months Matter</string>
    <string name="button_david_TheRiskIsWorthIt">The Small Risk Is Worth It</string>
    <string name="button_david_DamageWorseForEurope">Damage is worse for Europe</string>
    <string name="button_david_TrumpMoment">Trump moment</string>
    <string name="button_david_DoNotBlameMe">Not About Blame</string>
    <string name="button_david_WeCanLookAfterOurselves">We can look after ourselves</string>
    <string name="button_david_no_downside_to_brexit">No downside to brexit</string>

    <string name="button_liam_ChickenObsessedMedia">Chicken Obsessed Media</string>
    <string name="button_liam_CitizensFirstNotPolitics">Citizens First Not Politics</string>
    <string name="button_liam_EasiestInHumanHistory">Easiest In Human History</string>
    <string name="button_liam_NotHavingADealWouldBeBad">Not Having A Deal Would Be Bad</string>
    <string name="button_liam_ThisIsNotJustAboutEurope">This Is Not Just About Europe</string>
    <string name="button_liam_TooLazyAndTooFat">Too Lazy And Too Fat</string>
    <string name="button_liam_WeCantBeBlackmailed">We Can\'t Be Blackmailed</string>
    <string name="button_liam_SelfDefeatingPessimists">Self Defeating Pessimists</string>
    <string name="button_liam_FullConfidenceInPM">Full Confidence In PM [TM]</string>
    <string name="button_liam_OldMenOfBrussels">Old Men Of Brussels</string>
    <string name="button_liam_Sellout">Sellout</string>
    <string name="button_liam_ShockTherapyRequiredForEU">Shock Therapy Required For EU</string>
    <string name="button_liam_StealingBrexit">Stealing Brexit</string>
    <string name="button_liam_HaveToMaintainAccessToEU">Have To Maintain Access To EU</string>
    <string name="button_liam_ThinkOfTheConsequences">Think of the Political Consequences</string>

    <string name="button_theresa_BrexitMeansBrexit">Brexit Means Brexit</string>
    <string name="button_theresa_NoDealBetterThanABadDeal">No Deal Better Than A Bad Deal</string>
    <string name="button_theresa_NoNeedForAnElection">No Need For An Election</string>
    <string name="button_theresa_RedWhiteAndBlueBrexit">Red White And Blue Brexit</string>
    <string name="button_theresa_StrongAndStableLeadership">Strong And Stable Leadership</string>
    <string name="button_theresa_APlanForBritain">A Plan For Britain</string>
    <string name="button_theresa_CertaintyAndClarity">Certainty And Clarity</string>
    <string name="button_theresa_WeShouldStayInsideEU">We Should Stay Inside EU</string>
    <string name="button_theresa_NIisPartOfTheUK">NI is part of the UK</string>
    <string name="button_theresa_IWillNeverAgreeTo">Something I Will never agree to</string>
    <string name="button_theresa_CitizenOfNowhere">Citizen of Nowhere</string>

    <string name="button_jacob_PerilsOfForecasting">Perils of Forecasting</string>
    <string name="button_jacob_FiftyYearTimescale">Fifty Year Timescale</string>
    <string name="button_jacob_HappyBritishFish">Happy British Fish</string>
    <string name="button_jacob_brexit_daily_prayer">Daily Prayer</string>
    <string name="button_jacob_brexit_cheap_food">Cheap Food</string>
    <string name="button_jacob_minister_for_brexit_opportunities">Minister for Brexit Opportunities</string>

    <string name="footer_version">%s/%s</string>
    <string name="footer_oss">Open Source Software</string>
</resources>
