...
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_CitizenOfNowhere"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresAPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_APlanForBritain"
                android:textColor="@color/colorRed" />
...
