...
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_DamageWorseForEurope"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidAgreementWillFavourTheEU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_AgreementWillFavourTheEU"
                android:textColor="@color/colorRed" />
...
